--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
       {
        "extensions": [".js", ".jsx", ".tsx"]
       }
-    ]
+    ],
+    "prettier/prettier": "warn"
   },
   "settings": {
     "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
