--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     ],
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
+    "react/require-default-props": "off",
     "react/jsx-filename-extension": [
       "warn",
       {
