--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
     "plugin:@typescript-eslint/recommended",
     "airbnb",
     "airbnb/hooks",
-    "plugin:prettier/recommended"
+    "prettier"
   ],
   "overrides": [
     {
@@ -51,8 +51,7 @@
       {
        "extensions": [".js", ".jsx", ".tsx"]
       }
-    ],
-    "prettier/prettier": "warn"
+    ]
   },
   "settings": {
     "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
