--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "typescript": "^4.9.4",
+    "vite-tsconfig-paths": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
