--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitest/coverage-v8": "^0.33.0",
     "canvas": "^2.11.2",
     "eslint": "^8.30.0",
     "eslint-config-airbnb": "^19.0.4",
