--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest-image-snapshot": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
@@ -56,6 +57,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "jest-image-snapshot": "^6.2.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.1",
